# guardbench

./: .env.example  .gitignore  README.md  corpus_harness.json  docker-compose.yml  pyproject.toml
guardbench/: __init__.py  schemas.py
guardbench/adapters/: _mcp_stub_server.py  base.py  baseline.py  cisco_scanner.py  semgrep_mcp.py  snyk_agent_scan.py
guardbench/corpus/: cli.py  corpus.json  corpus_spotcheck.csv  schema.py  validate.py
guardbench/corpus/sources/: archive_sources.py  benign_patterns_notes.md  cve_catalog.json  cve_catalog.py  labeling-decisions.md  taxonomy_mapping.md
guardbench/corpus/working/: benign_draft.json  cve_derived_draft.json  seed_ids.txt  synthetic_draft.json  taxonomy_derived_draft.json
scripts/: apply_benign_review.py  apply_consistency_review.py  apply_review.py  apply_synthetic_review.py  build_master_corpus.py  generate_benign.py  generate_cve_derived.py  generate_synthetic_variants.py  generate_taxonomy_derived.py  run_phase3_smoke.py
tests/: test_base_adapter.py  test_baseline_adapter.py  test_cisco_scanner_adapter.py  test_corpus_cli.py  test_integration.py  test_placeholder.py  test_schemas.py  test_semgrep_adapter.py  test_snyk_agent_scan_adapter.py
