[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guardbench"
version = "0.1.0"
description = "Benchmarking framework for MCP security guardrails"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
    "pandas>=2.2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require external services (snyk API, network)",
]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["guardbench"]
